# codex-matrix-port

./: .gitignore  README.md  RESEARCH_PROMPT.md
.matrix/components/as_codex_.config/: manifest.json  provenance.json  reuse_map.md  source_map.json
.matrix/components/as_codex_.github/: manifest.json  provenance.json  reuse_map.md  source_map.json
.matrix/components/as_codex_.gitignore/: manifest.json  provenance.json  reuse_map.md  source_map.json
.matrix/components/as_codex_BUILD.bazel/: manifest.json  provenance.json  reuse_map.md  source_map.json
.matrix/components/as_codex_Cargo.lock/: manifest.json  provenance.json  reuse_map.md  source_map.json
.matrix/components/as_codex_Cargo.toml/: manifest.json  provenance.json  reuse_map.md  source_map.json
.matrix/components/as_codex_README.md/: manifest.json  provenance.json  reuse_map.md  source_map.json
.matrix/components/as_codex_analytics/: manifest.json  (+3 more)
.matrix/pipeline_evidence/: 01_collector_classification.json  02_codex_registry_snapshot.json  03_codex_form_bundle.json  07_caps_cutover.json  08_codex_voltmeter_probes.json  09_reuse_lookup.json  10_codex_export_dryrun_receipt.json  12_replay_state.json  13_flow_health.json  14_codex_artifact_guard.json  15_codex_funnel_axes_summary.json  16_codex_funnel_replay_state.json  17_codex_funnel_projection.json  18_codex_funnel_consolidation.json  INDEX.md
.matrix/registry/: assets.jsonl
codex-rs/: Cargo.toml
codex-rs/.cargo/: config.toml
codex-rs/Cargo.toml/: Cargo.toml
codex-rs/agent-graph-store/: Cargo.toml
codex-rs/analytics/: Cargo.toml
codex-rs/app-server/: Cargo.toml
codex-rs/app-server-client/: Cargo.toml
codex-rs/app-server-daemon/: Cargo.toml
codex-rs/app-server-protocol/: Cargo.toml
codex-rs/app-server-transport/: Cargo.toml
codex-rs/apply-patch/: Cargo.toml
codex-rs/async-utils/: Cargo.toml
codex-rs/aws-auth/: Cargo.toml
codex-rs/backend-client/: Cargo.toml
codex-rs/chatgpt/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/cloud-requirements/: Cargo.toml
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/cloud-tasks-client/: Cargo.toml
codex-rs/code-mode/: Cargo.toml
codex-rs/codex-api/: Cargo.toml
codex-rs/codex-backend-openapi-models/: Cargo.toml
codex-rs/codex-client/: Cargo.toml
codex-rs/codex-common-types/: Cargo.toml
codex-rs/codex-common-types/src/: lib.rs
codex-rs/codex-errors/: BUILD.bazel  Cargo.toml
codex-rs/codex-impl-macros/: Cargo.toml
codex-rs/codex-mcp/: Cargo.toml
codex-rs/codex-paths/: Cargo.toml
codex-rs/codex-test-support/: Cargo.toml
codex-rs/codex-test-support/src/: lib.rs  prelude.rs
codex-rs/config/: Cargo.toml
codex-rs/connectors/: Cargo.toml
codex-rs/core/: Cargo.toml
codex-rs/core-plugins/: Cargo.toml
codex-rs/core-skills/: Cargo.toml
codex-rs/exec/: Cargo.toml
codex-rs/exec-server/: Cargo.toml
codex-rs/execpolicy/: Cargo.toml
codex-rs/file-watcher/: Cargo.toml
codex-rs/git-utils/: Cargo.toml
codex-rs/hooks/: Cargo.toml
codex-rs/linux-sandbox/: Cargo.toml
codex-rs/lmstudio/: Cargo.toml
codex-rs/lmstudio/src/: client.rs
codex-rs/login/: Cargo.toml
codex-rs/matrix-test-macro/: BUILD.bazel  Cargo.toml  README.md
codex-rs/matrix-test-macro/src/: lib.rs
codex-rs/mcp-server/: Cargo.toml
codex-rs/message-history/: Cargo.toml
codex-rs/model-provider/: Cargo.toml
codex-rs/models-manager/: Cargo.toml
codex-rs/network-proxy/: Cargo.toml
codex-rs/ollama/: Cargo.toml
codex-rs/otel/: Cargo.toml
codex-rs/plugin/: Cargo.toml
codex-rs/protocol/: Cargo.toml
codex-rs/rmcp-client/: Cargo.toml
codex-rs/rollout/: Cargo.toml
codex-rs/rollout-trace/: Cargo.toml
codex-rs/sandboxing/: Cargo.toml
codex-rs/scripts/: _apply_pass_b.py  _apply_pass_b.report.json  _verify_pass_b.py
codex-rs/secrets/: Cargo.toml
codex-rs/shell-escalation/: Cargo.toml
codex-rs/state/: Cargo.toml
codex-rs/stdio-to-uds/: Cargo.toml
codex-rs/thread-store/: Cargo.toml
codex-rs/tui/: Cargo.toml
codex-rs/uds/: Cargo.toml
codex-rs/windows-sandbox-rs/: Cargo.toml
(+1014 files in other folders)
