[package]
name = "codex-common-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_common_types"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ts-rs = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
