[package]
name = "codex-lmstudio"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_lmstudio"
path = "src/lib.rs"
doctest = false


[dependencies]
codex-core = { path = "../core" }
codex-model-provider-info = { path = "../model-provider-info" }
reqwest = { workspace = true, features = ["json", "stream"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true, features = ["log"] }
which = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
